--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "serverless-http": "^4.0.0",
+    "swagger-jsdoc": "^6.2.8"
   }
 }
